Details
-
Bug
-
Status: Resolved
-
Minor
-
Resolution: Fixed
-
Impala 4.4.0
-
None
-
ghx-label-11
Description
Resource Pool information for CTAS query is missing from /queries page of WebUI. This is because CTAS query has TExecRequest.stmt_type = DDL. However, CTAS also has TQueryExecRequest.stmt_type = DML and subject to AdmissionControl. Therefore, its request pool must be recorded into QueryStateRecord and displayed at /queries page of WebUI.