IMPALA-13477: Set request_pool in QueryStateRecord for CTAS query

Resource Pool information for CTAS query is missing from /queries page
of WebUI. This is because CTAS query has TExecRequest.stmt_type = DDL.
However, CTAS also has TQueryExecRequest.stmt_type = DML and subject to
AdmissionControl. Therefore, its request pool must be recorded into
QueryStateRecord and displayed at /queries page of WebUI.

Testing:
- Update assertion in test_executor_groups.py to reflect this change.
- Pass core tests.

Change-Id: I6885192f1c2d563e58670f142b3c0df528032a6e
Reviewed-on: http://gerrit.cloudera.org:8080/21975
Reviewed-by: Jason Fehr <jfehr@cloudera.com>
Reviewed-by: Wenzhe Zhou <wzhou@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>